--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>edu.gsm.Application</mainClass>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
